--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-google-maps": "^9.4.5",
     "react-scripts-ts": "2.16.0"
   },
   "scripts": {
@@ -13,6 +14,7 @@
     "test": "react-scripts-ts test --env=jsdom"
   },
   "devDependencies": {
+    "@types/googlemaps": "^3.30.10",
     "@types/jest": "^23.1.3",
     "@types/node": "^10.5.1",
     "@types/react": "^16.4.6",
