--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-dom": "^16.0.6",
+    "jest-enzyme": "^6.0.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-google-maps": "^9.4.5",
-    "@types/react-dom": "^16.0.6",
     "react-scripts-ts": "2.16.0"
   },
   "scripts": {
@@ -15,10 +16,16 @@
     "test": "react-scripts-ts test --env=jsdom"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.1.11",
+    "@types/enzyme-adapter-react-16": "^1.0.2",
     "@types/googlemaps": "^3.30.10",
     "@types/jest": "^23.1.3",
     "@types/node": "^10.5.1",
     "@types/react": "^16.4.6",
+    "@types/react-test-renderer": "^16.0.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "react-test-renderer": "^16.4.1",
     "typescript": "^2.9.2"
   }
 }
